# sunshine

./: .gitignore  Cargo.toml  readme.md  readme.txt
input/: Cargo.toml
input-core/: Cargo.toml
input-core-stable-old/: Cargo.toml
input-core-stable-old/src/: modifiers.rs  scheduler.rs
input-core-stable/src/: lib.rs  result_with_context.rs  timed_event_ext.rs  timed_state.rs
input-core/src/: coords_state.rs  event_with_modifiers.rs  lib.rs  modifiers.rs  pointer_event.rs  pointer_state.rs  scheduler.rs  timed_event.rs  timed_event_ext.rs  timed_event_scheduler.rs  timed_state.rs
input-core/tests/: chain.rs  test.rs
input-more/: Cargo.toml
input-more-prev/: Cargo.toml
input-more-prev/src/: pointer_event.rs  state.rs  timed_event.rs
input-more-prev/tests/: chain.rs  input-core.rs
input-more-stable-old/: Cargo.toml
input-more-stable-old/src/: device_state.rs  global_mapping_cache.rs  global_state.rs  mapping_cache.rs  mapping_modifiers_cache.rs  struct_take_and_with_field.rs  struct_take_field.rs  switch_mapping_cache.rs
input-more-stable/src/: binding.rs  event.rs  (+1 more)
input/src/: aggregate_timed_event.rs  axis.rs  button.rs  combined.rs  event.rs  event_with_modifiers.rs  keyboard.rs  lib.rs  mapped.rs  mapping.rs  modified.rs  modifiers.rs  mouse.rs  processor.rs  raw.rs  timed.rs  timed_event.rs  timed_event_ext.rs
input/src/unused/: modified_event.rs  raw.rs  touch.rs
input/tests/: test.rs
logic/: Cargo.toml
parse/: Cargo.toml
src/: app.rs  database.rs  event.rs  exercise.rs  graph.rs  main.rs  state.rs  ui_event.rs  ui_state.rs
(+83 files in other folders)
