[package]
name = "sunshine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
escape8259 = "0.5.1"
serde_json = "1.0"
indradb-lib = "2.1.0"
lazy_static = "1.4.0"


[dependencies.serde]
version = "1.0.130"
features = [
    "derive"
]