[package]
name = "sunshine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "input-core",
    "parse",
    "logic",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escape8259 = "0.5.1"
serde_json = "1.0"
lazy_static = "1.4.0"
derive_more = "0.99.16"

[dependencies.input-core]
path = "./input-core"

[dependencies.serde]
version = "1.0.130"
features = [
    "derive"
]
