[package]
name = "input-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.30"

[dependencies.serde]
version = "1.0.130"
features = [
    "derive"
]

[dev-dependencies]
serde_json = "1.0.68"